--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -25,6 +25,7 @@ PreviewShaderPlatformName=None
 bPreviewFeatureLevelActive=False
 bPreviewFeatureLevelWasDefault=True
 PreviewDeviceProfileName=None
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.EditorStyleSettings]
 bColorVisionDeficiencyCorrection=False
@@ -218,7 +219,6 @@ MRUItem10=/Game/abandonedroom_Migration
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -301,7 +301,7 @@ StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCub
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
-StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
+StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.01- Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03- Roughness,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.06 - Translucency,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Wind,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.01- Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.01 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.02 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.02 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03- Roughness,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.04 - Normals,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Refraction,MaterialEditorInstanceConstant.ParameterGroups.06 - Translucency,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.06 - Refraction,MaterialEditorInstanceConstant.ParameterGroups.07 - Wind,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.07 - Emissive,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings
 MaterialInstanceConstant=
@@ -325,13 +325,13 @@ PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections
 BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-BrushComponent=
+BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights
 wardrobe_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 wardrobe_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
 StaticMeshComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -626,7 +626,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FloorTile
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -776,7 +776,7 @@ Object="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -1020,7 +1020,7 @@ MaterialExpressionFunctionOutput="\"Object\" "
 MaterialExpressionComment="\"Object\" "
 FbxExportOption="\"Object\" "
 PivotActorTransformProperties="\"Object\" "
-InteractiveToolPropertySet="\"Object\" "
+InteractiveToolPropertySet="\"Object\" \"Object.VertexPainting.PaintColor\" \"Object.VertexPainting.EraseColor\" \"Object.VertexPainting.VertexPainting|Visualization\" "
 EditPivotToolProperties="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 MeshTopologySelectionMechanicProperties="\"Object\" "
@@ -2902,7 +2902,7 @@ LevelEditorViewportSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2943,26 +2943,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/FloorTile/MM_FloorPanellivingRoom
-MRUItem1=/Game/Megascans/Surfaces/Moldy_Concrete_Floor_ugkfajxew/T_MoldyConcreteFloor_ugkfajxew_4K_ORDp
-MRUItem2=/Game/Megascans/Surfaces/Worn_Herringbone_Parquet_ugqiaajew/MI_Worn_Herringbone_Parquet_ugqiaajew_4K
-MRUItem3=/Game/Living_Room
-MRUItem4=/Game/Group_Assets/Aziz/Assets/TN-open-fields-terry-rainwaters_IJTWRA031-1024x683_Mat
-MRUItem5=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
-MRUItem6=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
-MRUItem7=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
-MRUItem8=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
-MRUItem9=/Game/Megascans/Decals/Shredded_Paper_Pile_smuqotl/MI_WallpaperScreededPile
-MRUItem10=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
-MRUItem11=/Game/Megascans/Decals/Broken_Tiles_Scatter_uktgfelh/MI_LivingRoomTiles
-MRUItem12=/Game/Group_Assets/Aziz/Assets/Wallpaper/MM_WallpaperLivingroom
-MRUItem13=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_LivingRoomPlaster
-MRUItem14=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_Worn_Wall_Plaster_tmglejmcw_2K
-MRUItem15=/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile2
-MRUItem16=/Game/Megascans/Surfaces/Flaked_Paint_Wall_vhqkdfx/MM_FlakedLivingRoomWallpaper
-MRUItem17=/Game/Megascans/Surfaces/Flaked_Paint_Wall_vhqkdfx/NewMaterial
-MRUItem18=/Game/Megascans/Surfaces/Flaked_Paint_Wall_vhqkdfx/T_FlakedPaintWall_vhqkdfx_4K_ORDp
-MRUItem19=/Game/Megascans/Surfaces/Flaked_Paint_Wall_vhqkdfx/T_Flaked_Paint_Wall_vhqkdfx_4K_N
+MRUItem0=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
+MRUItem1=/Game/Group_Assets/Aziz/Assets/FloorTile/MM_FloorPanellivingRoom
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
+MRUItem3=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline7
+MRUItem4=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
+MRUItem5=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
+MRUItem6=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
+MRUItem7=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
+MRUItem8=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline
+MRUItem9=/Game/Living_Room
+MRUItem10=/Game/Megascans/Surfaces/Moldy_Concrete_Floor_ugkfajxew/T_MoldyConcreteFloor_ugkfajxew_4K_ORDp
+MRUItem11=/Game/Megascans/Surfaces/Worn_Herringbone_Parquet_ugqiaajew/MI_Worn_Herringbone_Parquet_ugqiaajew_4K
+MRUItem12=/Game/Group_Assets/Aziz/Assets/TN-open-fields-terry-rainwaters_IJTWRA031-1024x683_Mat
+MRUItem13=/Game/Megascans/Decals/Shredded_Paper_Pile_smuqotl/MI_WallpaperScreededPile
+MRUItem14=/Game/Megascans/Decals/Broken_Tiles_Scatter_uktgfelh/MI_LivingRoomTiles
+MRUItem15=/Game/Group_Assets/Aziz/Assets/Wallpaper/MM_WallpaperLivingroom
+MRUItem16=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_LivingRoomPlaster
+MRUItem17=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_Worn_Wall_Plaster_tmglejmcw_2K
+MRUItem18=/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile2
+MRUItem19=/Game/Megascans/Surfaces/Flaked_Paint_Wall_vhqkdfx/MM_FlakedLivingRoomWallpaper
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -3088,6 +3088,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/TN-open-fields-terry-rainwaters_IJTWRA031-1024x683_Mat.TN-open-fields-terry-rainwaters_IJTWRA031-1024x683_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Megascans/Decals/Tile_Rubble_Pile_tcupfgh/MI_Tile_Rubble_Pile_tcupfgh_2K.MI_Tile_Rubble_Pile_tcupfgh_2K;
@@ -3104,7 +3105,6 @@ RecentlyPlaced=/Game/Megascans/Decals/Damaged_Plaster_Patch_vdekajsfw/MI_Damaged
 RecentlyPlaced=/Game/Megascans/3D_Assets/Brown_Decorative_Book_vdjlainaa/S_Brown_Decorative_Book_vdjlainaa_lod3_Var1.S_Brown_Decorative_Book_vdjlainaa_lod3_Var1;
 RecentlyPlaced=/Game/Group_Assets/Tashan/book/openbook.openbook;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Wallpaper/MM_WallpaperLivingroom.MM_WallpaperLivingroom;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_FeintConcreteCrack.MI_FeintConcreteCrack;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile2.SM_WallTile2;
 RecentlyPlaced=/Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_Concrete_Crack_se4otkg_4K_Inst1.MI_Concrete_Crack_se4otkg_4K_Inst1;
