--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -301,7 +301,7 @@ StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCub
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
-StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights
+StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.01- Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03- Roughness,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.06 - Translucency,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Wind,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.01- Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.01 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.02 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.02 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03- Roughness,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.04 - Normals,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Refraction,MaterialEditorInstanceConstant.ParameterGroups.06 - Translucency,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.06 - Refraction,MaterialEditorInstanceConstant.ParameterGroups.07 - Wind,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.07 - Emissive,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings
 MaterialInstanceConstant=
@@ -325,13 +325,13 @@ PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections
 BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights
+BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 wardrobe_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 wardrobe_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
 StaticMeshComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -626,7 +626,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/TimelineStuff
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2902,7 +2902,7 @@ LevelEditorViewportSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -2943,16 +2943,16 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
-MRUItem1=/Game/Group_Assets/Aziz/Assets/FloorTile/MM_FloorPanellivingRoom
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
-MRUItem3=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline7
-MRUItem4=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
-MRUItem5=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
-MRUItem6=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
-MRUItem7=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
-MRUItem8=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline
-MRUItem9=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
+MRUItem2=/Game/Group_Assets/Aziz/Assets/FloorTile/MM_FloorPanellivingRoom
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
+MRUItem4=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline7
+MRUItem5=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
+MRUItem6=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
+MRUItem7=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
+MRUItem8=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
+MRUItem9=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline
 MRUItem10=/Game/Megascans/Surfaces/Moldy_Concrete_Floor_ugkfajxew/T_MoldyConcreteFloor_ugkfajxew_4K_ORDp
 MRUItem11=/Game/Megascans/Surfaces/Worn_Herringbone_Parquet_ugqiaajew/MI_Worn_Herringbone_Parquet_ugqiaajew_4K
 MRUItem12=/Game/Group_Assets/Aziz/Assets/TN-open-fields-terry-rainwaters_IJTWRA031-1024x683_Mat
@@ -3873,7 +3873,7 @@ ScreenPosition=X=104.000 Y=0.000
 ScreenPosition=X=-101.600 Y=62.400
 ScreenPosition=X=-7.333 Y=0.000
 ScreenPosition=X=148.000 Y=8.667
-ScreenPosition=X=1.000 Y=1.000
+ScreenPosition=X=1.000 Y=94.000
 None=======
 None=======
 None=======
@@ -3979,7 +3979,7 @@ WindowSize=X=1394.000 Y=834.000
 WindowSize=X=1391.333 Y=831.333
 WindowSize=X=1396.000 Y=836.000
 WindowSize=X=1397.333 Y=813.333
-WindowSize=X=1912.000 Y=1024.000
+WindowSize=X=1912.000 Y=932.000
 InitiallyMaximized=True
 InitiallyMaximized=True
 InitiallyMaximized=True
