--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -626,7 +626,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Wallpaper
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -940,7 +940,7 @@ StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\"
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" \"Object.ImportSettings.AssetImportData.Object.Interchange .Interchange | AssetImportData\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -951,7 +951,7 @@ Brush="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" 
 Brush="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
-StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 AssetViewerSettings="\"Object\" "
 MaterialExpressionConstant3Vector="\"Object\" \"Object.Constant\" "
 Actor="\"Object\" "
@@ -2902,7 +2902,7 @@ LevelEditorViewportSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2943,26 +2943,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
-MRUItem2=/Game/Group_Assets/Aziz/Assets/FloorTile/MM_FloorPanellivingRoom
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
-MRUItem4=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline7
-MRUItem5=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
-MRUItem6=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
-MRUItem7=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
-MRUItem8=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
-MRUItem9=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline
-MRUItem10=/Game/Megascans/Surfaces/Moldy_Concrete_Floor_ugkfajxew/T_MoldyConcreteFloor_ugkfajxew_4K_ORDp
-MRUItem11=/Game/Megascans/Surfaces/Worn_Herringbone_Parquet_ugqiaajew/MI_Worn_Herringbone_Parquet_ugqiaajew_4K
-MRUItem12=/Game/Group_Assets/Aziz/Assets/TN-open-fields-terry-rainwaters_IJTWRA031-1024x683_Mat
-MRUItem13=/Game/Megascans/Decals/Shredded_Paper_Pile_smuqotl/MI_WallpaperScreededPile
-MRUItem14=/Game/Megascans/Decals/Broken_Tiles_Scatter_uktgfelh/MI_LivingRoomTiles
-MRUItem15=/Game/Group_Assets/Aziz/Assets/Wallpaper/MM_WallpaperLivingroom
-MRUItem16=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_LivingRoomPlaster
-MRUItem17=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_Worn_Wall_Plaster_tmglejmcw_2K
-MRUItem18=/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile2
-MRUItem19=/Game/Megascans/Surfaces/Flaked_Paint_Wall_vhqkdfx/MM_FlakedLivingRoomWallpaper
+MRUItem0=/Game/Group_Assets/Aziz/Assets/FloorTile/SM_FloorPanel
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
+MRUItem3=/Game/Group_Assets/Aziz/Assets/FloorTile/MM_FloorPanellivingRoom
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
+MRUItem5=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline7
+MRUItem6=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
+MRUItem7=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
+MRUItem8=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
+MRUItem9=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
+MRUItem10=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline
+MRUItem11=/Game/Megascans/Surfaces/Moldy_Concrete_Floor_ugkfajxew/T_MoldyConcreteFloor_ugkfajxew_4K_ORDp
+MRUItem12=/Game/Megascans/Surfaces/Worn_Herringbone_Parquet_ugqiaajew/MI_Worn_Herringbone_Parquet_ugqiaajew_4K
+MRUItem13=/Game/Group_Assets/Aziz/Assets/TN-open-fields-terry-rainwaters_IJTWRA031-1024x683_Mat
+MRUItem14=/Game/Megascans/Decals/Shredded_Paper_Pile_smuqotl/MI_WallpaperScreededPile
+MRUItem15=/Game/Megascans/Decals/Broken_Tiles_Scatter_uktgfelh/MI_LivingRoomTiles
+MRUItem16=/Game/Group_Assets/Aziz/Assets/Wallpaper/MM_WallpaperLivingroom
+MRUItem17=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_LivingRoomPlaster
+MRUItem18=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_Worn_Wall_Plaster_tmglejmcw_2K
+MRUItem19=/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile2
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -3685,6 +3685,7 @@ None=======
 /Game/Megascans/Surfaces/Worn_Herringbone_Parquet_ugqiaajew/MI_Worn_Herringbone_Parquet_ugqiaajew_4K.MI_Worn_Herringbone_Parquet_ugqiaajew_4K=1
 /Game/Group_Assets/Aziz/Assets/FloorTile/MM_FloorPanellivingRoom.MM_FloorPanellivingRoom=1
 /Game/Megascans/Surfaces/Moldy_Concrete_Floor_ugkfajxew/T_MoldyConcreteFloor_ugkfajxew_4K_ORDp.T_MoldyConcreteFloor_ugkfajxew_4K_ORDp=1
+/Game/Group_Assets/Aziz/Assets/FloorTile/SM_FloorPanel.SM_FloorPanel=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
