--- a/MorriganHall 5.2/Config/DefaultEngine.ini
+++ b/MorriganHall 5.2/Config/DefaultEngine.ini
@@ -33,6 +33,11 @@ r.VirtualTextures=True
 bEnableVirtualTextureOpacityMask=True
 r.AllowStaticLighting=False
 r.AllowGlobalClipPlane=False
+r.Lumen.HardwareRayTracing=False
+r.RayTracing.Shadows=False
+r.RayTracing.Skylight=False
+r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
+r.Lumen.HardwareRayTracing.LightingMode=0
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
